sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
	swap = false;
	while(swap=true){
	for(i <- getNombreValeurs()-2 to 0 by -1){
		if(plusPetit(i+1, i)){
			echange(i,i+1);
			swap = true;
			
			
		
	}
}
}
}